--- a/metager/resources/less/metager/pages/settings.less
+++ b/metager/resources/less/metager/pages/settings.less
@@ -1,98 +1,100 @@
 #settings {
-    .sumas {
-        display: flex;
-        flex-wrap: wrap;
-        margin-left: -8px;
-        .suma button {
-            color:black;
-            padding: 8px;
-            margin-left: 8px;
-            margin-top: 8px;
-            border-radius: 4px;
-        }
-        &.enabled-engines .suma button {
-            background-color: #9ad79a;
-        }
-        &.disabled-engines .suma button {
-            background-color: #fea0a0;
-            text-decoration: line-through;
-        }
-        &.filtered-engines .suma{
-            background-color: #bababa;
-            padding: 8px;
-            margin-left: 8px;
-            margin-top: 8px;
-            border-radius: 4px;
-        }
+  .sumas {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -8px;
+    .suma button {
+      color: black;
+      padding: 8px;
+      margin-left: 8px;
+      margin-top: 8px;
+      border-radius: 4px;
     }
+    &.enabled-engines .suma button {
+      background-color: #9ad79a;
+    }
+    &.disabled-engines .suma button {
+      background-color: #fea0a0;
+      text-decoration: line-through;
+    }
+    &.filtered-engines .suma {
+      background-color: #bababa;
+      padding: 8px;
+      margin-left: 8px;
+      margin-top: 8px;
+      border-radius: 4px;
+    }
+  }
 
-    #filter-options {
-        display: flex;
-        flex-wrap: wrap;
-        margin-left: -8px;
-        > div {
-            margin-left: 8px;
-        }
+  #filter-options {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -8px;
+    > div {
+      margin-left: 8px;
     }
+  }
 
-    #actions {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-wrap: wrap;
-        > #back, > a, > form {
-            margin-left: 8px;
-            margin-top: 4px;
-            margin-bottom: 4px;
-        }
+  #actions {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    > #back,
+    > a,
+    > form {
+      margin-left: 8px;
+      margin-top: 4px;
+      margin-bottom: 4px;
     }
+  }
 
-    #no-settings {
-        text-align: center;
-    }
+  #no-settings {
+    text-align: center;
+  }
 
-    #newentry{
-        #create{
-            display:flex;
-            align-items:left;
-            flex-direction: column;
-            gap: 1rem;
-            margin-bottom:10px;
-            #blacklist{
-                width: fit-content;
-                font-size: 1.2rem;
-                line-height: 1.2;
-                background-color:@input-bg;
-                color:@input-text;
-            }
-            button{
-                width:200px;
-            }
-        }
+  #newentry {
+    #create {
+      display: flex;
+      align-items: left;
+      flex-direction: column;
+      gap: 1rem;
+      margin-bottom: 10px;
+      #blacklist {
+        width: fit-content;
+        font-size: 1.2rem;
+        line-height: 1.2;
+        background-color: @input-bg;
+        color: @input-text;
+      }
+      button {
+        width: 200px;
+      }
     }
-    #deleteentry{
-        table{
-            border:1px solid lightgray;
-            flex-grow:1;
-            width:100%;
-        }
-        tr:nth-child(odd){
-            background-color:@blacklist-entries-odd;
-        }
-        tr:nth-child(even){
-            background-color:@blacklist-entries-even;
-        }
-        td{
-            padding:2px 0px;
-        }
-        td:first-child{
-            padding-left:5px;
-        }
-        td:last-child{
-            width:20px;
-        }
+  }
+  #deleteentry {
+    table {
+      border: 1px solid lightgray;
+      flex-grow: 1;
+      width: 100%;
     }
-    .allSettings-trashcan-icon {
-        height:2em;
+    tr:nth-child(odd) {
+      background-color: @blacklist-entries-odd;
     }
+    tr:nth-child(even) {
+      background-color: @blacklist-entries-even;
+    }
+    td {
+      padding: 2px 0px;
+    }
+    td:first-child {
+      padding-left: 5px;
+    }
+    td:last-child {
+      width: 20px;
+    }
+  }
+  .allSettings-trashcan-icon {
+    height: 2em;
+  }
 }
