--- a/metager/resources/less/metager/pages/settings.less
+++ b/metager/resources/less/metager/pages/settings.less
@@ -19,6 +19,7 @@
     }
     &.filtered-engines .suma {
       background-color: #bababa;
+      color: #777;
       padding: 8px;
       margin-left: 8px;
       margin-top: 8px;
