--- a/metager/resources/less/metager/pages/settings.less
+++ b/metager/resources/less/metager/pages/settings.less
@@ -1,16 +1,49 @@
 #settings {
+  .no-key-actions,
+  .actions {
+    a:visited {
+      color: inherit;
+    }
+    a:hover {
+      color: red;
+    }
+  }
+  .actions {
+    margin-top: 1rem;
+  }
   .sumas {
     display: flex;
+    gap: 1rem;
     flex-wrap: wrap;
-    margin-left: -8px;
-    .suma button {
-      color: black;
-      padding: 8px;
-      margin-left: 8px;
-      margin-top: 8px;
-      border-radius: 4px;
+    margin: 1rem 0;
+    .suma {
+      border: 1px solid;
+      border-radius: 10px;
+      > form {
+        display: grid;
+        place-content: center;
+
+        button {
+          color: @text-color;
+          padding: 0.7rem;
+          cursor: no-drop;
+        }
+      }
+      &.disabled-engine {
+        color: lighten(@text-color, 50%);
+        button {
+          text-decoration: line-through;
+          color: lighten(@text-color, 50%);
+          cursor: copy;
+        }
+      }
+      &.not-available {
+        button {
+          cursor: not-allowed;
+        }
+      }
     }
-    &.enabled-engines .suma button {
+    /*&.enabled-engines .suma {
       background-color: #9ad79a;
     }
     &.disabled-engines .suma button {
@@ -24,7 +57,7 @@
       margin-left: 8px;
       margin-top: 8px;
       border-radius: 4px;
-    }
+    }*/
   }
 
   #filter-options {
