--- a/metager/resources/less/metager/pages/start-page.less
+++ b/metager/resources/less/metager/pages/start-page.less
@@ -3,49 +3,60 @@
 @main-content-width: 1000px;
 
 #main-content {
-    flex-grow: 1;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+
+  @media (max-width: @main-content-width) {
+    width: 100%;
+  }
+
+  @media (min-width: @main-content-width) {
+    width: @main-content-width;
+  }
+
+  #startpage-quicklinks {
     display: flex;
-    flex-direction: column;
-
-    @media(max-width: @main-content-width) {
-        width: 100%;
+    justify-content: center;
+    margin-top: 16px;
+    gap: 1rem;
+    flex-wrap: wrap;
+    padding: 1rem;
+    > .metager-key {
+      color: inherit;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      > img {
+        height: 1em;
+        filter: invert(1) brightness(40%);
+      }
     }
-
-    @media(min-width: @main-content-width) {
-        width: @main-content-width;
-    }
-
-    #plugin-btn-div {
-        display: flex;
-        justify-content: center;
-        margin-top: 16px;
-    }
-
     #plugin-btn {
-        color: @text-color;
+      color: @text-color;
+    }
+  }
+
+  #scroll-helper {
+    .card;
+    position: absolute;
+    bottom: 0px;
+    right: 8px;
+    padding: 11px;
+    color: #777;
+    border: 0;
+    width: 30px;
+    height: 30px;
+    align-items: center;
+    display: none;
+
+    &:hover {
+      color: red;
+      background-color: #ccc;
     }
 
-    #scroll-helper {
-        .card;
-        position: absolute;
-        bottom: 0px;
-        right: 8px;
-        padding: 11px;
-        color: #777;
-        border: 0;
-        width: 30px;
-        height: 30px;
-        align-items: center;
-        display: none;
-
-        &:hover {
-            color: red;
-            background-color: #ccc;
-        }
-
-        @media(max-width: 503px) {
-            display: flex;
-        }
+    @media (max-width: 503px) {
+      display: flex;
     }
-
+  }
 }
