added links to advertisements

--- a/metager/resources/less/metager/pages/resultpage/result.less
+++ b/metager/resources/less/metager/pages/resultpage/result.less
@@ -273,7 +273,8 @@
     }
 
     .result-open,
-    .result-open-newtab {
+    .result-open-newtab,
+    .result-open-metagerkey {
       &,
       &:active,
       &:hover,
