--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -296,7 +296,7 @@ a {
 
             > div {
               > img {
-                width: 100%;
+                height: 150px;
               }
             }
           }
