fixed width of searchbar while loading

--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -544,6 +544,8 @@ a {
   }
 
   @media (max-width: 1350px) {
+    width: 100%;
+    max-width: 800px;
     grid-template-columns: 100%;
     grid-template-areas: "searchbar" "foki" "options" "results" "footer";
 
