changed position of unstable warning

--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -911,7 +911,7 @@ footer.resultPageFooter {
 
 .metager3-unstable-warning-static-pages {
   .metager3-unstable-warning;
-  top: 0;
+  top: 3.5rem;
   padding-right: 50px;
 
   @media (max-width: @screen-mobile) {
