fixed backgroundcolor of unstable warning

--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -913,7 +913,7 @@ footer.resultPageFooter {
   .metager3-unstable-warning;
   top: 3.5rem;
   padding-right: 50px;
-
+  background-color: inherit;
   @media (max-width: @screen-mobile) {
     padding: 5px;
     padding-right: 50px;
@@ -924,6 +924,7 @@ footer.resultPageFooter {
   .metager3-unstable-warning;
   bottom: 0;
   margin-bottom: 0px;
+  background-color: inherit;
 }
 
 /* Settings button and checkboxes */
