--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -296,7 +296,9 @@ a {
 
             > div {
               > img {
-                height: 150px;
+                width: 100%;
+                max-width: 300px;
+                max-height: 250px;
               }
             }
           }
