added badge class

--- a/metager/resources/less/metager/pages/resultpage/result.less
+++ b/metager/resources/less/metager/pages/resultpage/result.less
@@ -167,7 +167,7 @@
         }
       }
 
-      a.partnershop-info {
+      a.badge {
         display: block;
         color: #0d9c0d;
         padding: 1px;
