additions container is sticky now

--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -520,7 +520,9 @@ a {
     //min-width: @additions-width-min;
     max-width: @additions-width-max;
     width: 100%;
-    height: 100%;
+    height: max-content;
+    position: sticky;
+    top: 0;
 
     #search-settings {
       display: none;
