--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -521,6 +521,8 @@ a {
     max-width: @additions-width-max;
     width: 100%;
     height: max-content;
+    max-height: 100vh;
+    overflow: auto;
     position: sticky;
     top: 0;
 
