--- a/metager/resources/less/metager/pages/help-easy-language.less
+++ b/metager/resources/less/metager/pages/help-easy-language.less
@@ -1,93 +1,101 @@
-p, li{
-    font-size: 19px;
-}
-a, a:visited {
-    font-size: 19px;
-    text-decoration: underline;
+.hilfe {
 
-}
-h2{
-    font-size: 24px;
-    line-height: 1.5;
-}
 
-h3{
-    font-size: 22px;
-    line-height: 1.5;
-    font-weight: bold;
 
-}
-h4{
-    font-size: 19px;
-    font-weight: bold;
-    margin-bottom: 5px!important;
-}
-.help-easy-language-mainpages-image{
-    border-color: #ccc;
-    border-width: 2px;
-    border-style: solid;
-    height: 140px;
-    margin-top: 4px;
-    margin-bottom: 4px;
-}
-.help-easy-language-searchfilter-and-blacklist{
-    height: 170px;
-}
-
-#help-vertial-menu-image {
-    border-color: #ccc;
-    border-width: 2px;
-    border-style: solid;
-    margin-bottom: 25px;
-}
-#easy-help-mainpage-blacklist-image {
-    height: 190px;
-    border-color: #ccc;
-    border-width: 2px;
-    border-style: solid;
-    margin-bottom: 25px;
-}
-#easy-help-mainpages-more-settings-image {
-    height: 250px;
-    border-color: #ccc;
-    border-width: 2px;
-    border-style: solid;
-    margin-bottom: 20px;
-}
-#easy-help-mainpages-settings-cite {
-    height: 400px;
-    border-color: #ccc;
-    border-width: 2px;
-    border-style: solid;
-    margin-bottom: 20px;
-}
-.card.help-section {
-    p{
-        line-height: 1.5;
-        margin-top:5px;
-        margin-bottom: 20px!important;
+    p, li{
+        font-size: 19px;
     }
-}
-.dotlist{
-    font-size: 19px;
-}
+    a, a:visited {
+        font-size: 19px;
+        text-decoration: underline;
 
-#easy-help-services-maps {
-    height: 250px;
-    border-color: #ccc;
-    border-width: 2px;
-    border-style: solid;
-    margin-bottom: 20px;
-}
-#easy-help-services-maps-right-list {
-    height: 500px;
-    border-color: #ccc;
-    border-width: 2px;
-    border-style: solid;
-    margin-bottom: 20px;
-}
+    }
+    a.back-button, a.up-button, #help-easy-language-button-back {
+        text-decoration: none;
+    }
+    h2{
+        font-size: 24px;
+        line-height: 1.5;
+    }
 
-.glossary-icon{
-    height:1em;
-    padding-left: 0.2em;
+    h3{
+        font-size: 22px;
+        line-height: 1.5;
+        font-weight: bold;
+
+    }
+    h4{
+        font-size: 19px;
+        font-weight: bold;
+        margin-bottom: 5px!important;
+    }
+    .help-easy-language-mainpages-image{
+        border-color: #ccc;
+        border-width: 2px;
+        border-style: solid;
+        height: 140px;
+        margin-top: 4px;
+        margin-bottom: 4px;
+    }
+    .help-easy-language-searchfilter-and-blacklist{
+        height: 170px;
+    }
+
+    #help-vertial-menu-image {
+        border-color: #ccc;
+        border-width: 2px;
+        border-style: solid;
+        margin-bottom: 25px;
+    }
+    #easy-help-mainpage-blacklist-image {
+        height: 190px;
+        border-color: #ccc;
+        border-width: 2px;
+        border-style: solid;
+        margin-bottom: 25px;
+    }
+    #easy-help-mainpages-more-settings-image {
+        height: 250px;
+        border-color: #ccc;
+        border-width: 2px;
+        border-style: solid;
+        margin-bottom: 20px;
+    }
+    #easy-help-mainpages-settings-cite {
+        height: 400px;
+        border-color: #ccc;
+        border-width: 2px;
+        border-style: solid;
+        margin-bottom: 20px;
+    }
+    .card.help-section {
+        p{
+            line-height: 1.5;
+            margin-top:5px;
+            margin-bottom: 20px!important;
+        }
+    }
+    .dotlist{
+        font-size: 19px;
+    }
+
+    #easy-help-services-maps {
+        height: 250px;
+        border-color: #ccc;
+        border-width: 2px;
+        border-style: solid;
+        margin-bottom: 20px;
+    }
+    #easy-help-services-maps-right-list {
+        height: 500px;
+        border-color: #ccc;
+        border-width: 2px;
+        border-style: solid;
+        margin-bottom: 20px;
+    }
+
+    .glossary-icon{
+        height:1em;
+        padding-left: 0.2em;
+    }
 }
