change pic to current version, delete old alt text

--- a/metager/resources/less/metager/pages/help-easy-language.less
+++ b/metager/resources/less/metager/pages/help-easy-language.less
@@ -42,10 +42,11 @@
     }
 
     #help-vertial-menu-image {
-        border-color: #ccc;
+        border-color: rgb(0, 0, 0);
         border-width: 2px;
         border-style: solid;
         margin-bottom: 25px;
+        filter: invert(100%) brightness(54.4%);
     }
     #easy-help-mainpage-blacklist-image {
         height: 190px;
