add pictures for darkmode and fitting classes

--- a/metager/resources/less/metager/metager-dark.less
+++ b/metager/resources/less/metager/metager-dark.less
@@ -22,3 +22,12 @@
 @import "./parts/scaffolding.less";
 @import "./parts/button.less";
 @import "./parts/dropdowns.less";
+
+.lm-only{
+    display: none;
+    visibility: hidden;
+}
+.dm-only{
+    display: initial;
+    visibility: visible;
+}
