--- a/metager/resources/less/metager/metager.less
+++ b/metager/resources/less/metager/metager.less
@@ -22,3 +22,12 @@
 @import "./parts/button.less";
 @import "./parts/dropdowns.less";
 @import "./parts/mg-icons.less";
+
+.dm-only{
+    display: none;
+    visibility: hidden;
+}
+.lm-only{
+    display: initial;
+    visibility: visible;
+}
