fixed label and color of key icon

--- a/metager/resources/less/metager/parts/searchbar.less
+++ b/metager/resources/less/metager/parts/searchbar.less
@@ -187,8 +187,14 @@
   .search-input-submit {
     padding: 0 0.5rem;
     margin-right: 2rem;
-    .search-input #search-delete-btn {
-      bottom: calc(50%);
+    .search-input {
+      height: 1.9rem;
+      > input {
+        padding: 0 0.5rem;
+      }
+      #search-delete-btn {
+        bottom: calc(50%);
+      }
     }
   }
 }
@@ -204,19 +210,13 @@
 }
 
 #searchbar-img-key {
-  height: 15px;
-  filter: invert(1) brightness(0.4);
+  filter: brightness(@searchbar-key-brightness);
 }
 
 #searchbar-img-lupe {
-  height: 15px;
-  filter: invert(1) brightness(0.4);
+  filter: invert(1) brightness(@searchbar-searchicon-brightness);
 }
 
 .search-submit button {
   cursor: pointer;
-}
-
-.authorized #searchbar-img-key {
-  filter: initial;
 }
