--- a/metager/resources/less/metager/variables-dark.less
+++ b/metager/resources/less/metager/variables-dark.less
@@ -11,7 +11,7 @@
 @sidebar-list-hover-color: @color-strong-grey;
 // Card styles
 @card-background-color: @color-strong-grey;
-// Default Borde Color 
+// Default Borde Color
 @border-color: #727272;
 // Inverts color of svgs. Our Svgs are all black which means 0% invert for light and 100% for dark.
 @invert-state: invert(100%);
@@ -36,3 +36,6 @@
 
 @blacklist-entries-odd: @color-almost-black;
 @blacklist-entries-even: rgb(30, 15, 0);
+
+@searchbar-searchicon-brightness: 0.7;
+@searchbar-key-brightness: 0.7;
