fixed key color if empty

--- a/metager/resources/less/metager/pages/start-page.less
+++ b/metager/resources/less/metager/pages/start-page.less
@@ -29,7 +29,8 @@
       gap: 0.5rem;
       > img {
         height: 1em;
-        filter: invert(1) brightness(40%);
+        rotate: -90deg;
+        filter: brightness(@searchbar-key-brightness);
       }
     }
     #plugin-btn {
