fix max width for images

--- a/metager/resources/less/metager/pages/help.less
+++ b/metager/resources/less/metager/pages/help.less
@@ -12,10 +12,8 @@
         }
 
         div.image-container {
-            align-items: center;
-            justify-content: center;
-
             img {
+                max-width: 90vw;
                 margin: 10px 0;
                 padding: 8px;
                 border: 1px solid @border-color;
