--- a/metager/resources/less/metager/pages/help-easy-language.less
+++ b/metager/resources/less/metager/pages/help-easy-language.less
@@ -30,15 +30,16 @@
         margin-bottom: 5px!important;
     }
     .help-easy-language-mainpages-image{
+        max-width: 90vw;
         border-color: #ccc;
         border-width: 2px;
         border-style: solid;
-        height: 140px;
+        max-height: 140px;
         margin-top: 4px;
         margin-bottom: 4px;
     }
     .help-easy-language-searchfilter-and-blacklist{
-        height: 170px;
+        max-height: 170px;
     }
 
     #help-vertial-menu-image {
@@ -49,21 +50,24 @@
         filter: invert(100%) brightness(54.4%);
     }
     #easy-help-mainpage-blacklist-image {
-        height: 190px;
+        max-width: 90vw;
+        max-height: 190px;
         border-color: #ccc;
         border-width: 2px;
         border-style: solid;
         margin-bottom: 25px;
     }
     #easy-help-mainpages-more-settings-image {
-        height: 250px;
+        max-width: 90vw;
+        max-height: 250px;
         border-color: #ccc;
         border-width: 2px;
         border-style: solid;
         margin-bottom: 20px;
     }
     #easy-help-mainpages-settings-cite {
-        height: 400px;
+        max-width: 90vw;
+        max-height: 400px;
         border-color: #ccc;
         border-width: 2px;
         border-style: solid;
@@ -81,14 +85,16 @@
     }
 
     #easy-help-services-maps {
-        height: 250px;
+        max-width: 90vw;
+        max-height: 250px;
         border-color: #ccc;
         border-width: 2px;
         border-style: solid;
         margin-bottom: 20px;
     }
     #easy-help-services-maps-right-list {
-        height: 500px;
+        max-width: 90vw;
+        max-height: 500px;
         border-color: #ccc;
         border-width: 2px;
         border-style: solid;
