fixed lock icon below searchbar

--- a/metager/resources/less/metager/pages/start-page.less
+++ b/metager/resources/less/metager/pages/start-page.less
@@ -32,6 +32,12 @@
         rotate: -90deg;
         filter: brightness(@searchbar-key-brightness);
       }
+
+      &.no-key {
+        > img {
+          rotate: 0deg;
+        }
+      }
     }
     #plugin-btn {
       color: @text-color;
