change key icon for help

--- a/metager/resources/less/metager/pages/help.less
+++ b/metager/resources/less/metager/pages/help.less
@@ -214,10 +214,10 @@ background-position: 35% 20%;
         
 }
 #help-topic-searchinsearch {
-    background-image: url("/img/searchinsearch-icon-help.svg");
-    background-size: 50px;
+    background-image: url("/img/key-icon-help.svg");
+    background-size: 60px;
     background-repeat: no-repeat;
-    background-position: 50% 20%;
+    background-position: 60% 20%;
         
 }
 #help-topic-addmetager {
