--- a/metager/resources/less/metager/pages/resultpage/result.less
+++ b/metager/resources/less/metager/pages/resultpage/result.less
@@ -153,7 +153,7 @@
           color: #8091a2;
         }
 
-        span.advertisement-mark {
+        span.mark {
           border-color: #0d9c0d;
           color: #0d9c0d;
           padding: 1px;
