fixed position of footer

--- a/metager/resources/less/metager/pages/resultpage/result.less
+++ b/metager/resources/less/metager/pages/resultpage/result.less
@@ -208,6 +208,7 @@
       }
       .result-footer {
         grid-area: footer;
+        align-self: end;
       }
       .result-options {
         grid-area: options;
