--- a/metager/resources/less/metager/pages/spende/amount.less
+++ b/metager/resources/less/metager/pages/spende/amount.less
@@ -8,7 +8,7 @@
     gap: 0.5rem;
     > li {
       cursor: pointer;
-      padding: 1rem;
+
       border: 1px solid @color-light-grey;
       border-radius: 5px;
       font-weight: bold;
@@ -31,10 +31,16 @@
             border: 0;
             border-radius: 5px;
             font-size: 1.1rem;
+            &:focus {
+              outline: 0;
+            }
           }
           > button {
             border: 0;
             border-radius: 5px;
+            border-left: 1px solid @color-light-grey;
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
           }
         }
       }
@@ -49,7 +55,9 @@
         }
       }
       > a {
+        display: block;
         color: @text-color;
+        padding: 1rem;
       }
     }
     > input[type="checkbox"] {
@@ -64,6 +72,47 @@
 
     @media (max-width: 450px) {
       grid-template-columns: repeat(3, 1fr);
+    }
+  }
+
+  > #other {
+    padding: 1rem 0;
+    display: flex;
+    justify-content: space-between;
+    gap: 5rem;
+    @media (max-width: 730px) {
+      flex-direction: column;
+      gap: 1rem;
+    }
+    > div {
+      background-color: @highlightcolor;
+      padding: 1rem;
+      border-radius: 15px;
+      h3 {
+        font-size: clamp(1rem, 4.5vw, 1.2rem);
+      }
+      &#bank-transfer {
+        display: grid;
+        grid-template-rows: auto 1fr;
+        place-items: center;
+        > h3 {
+          white-space: nowrap;
+          text-align: center;
+        }
+        > .bankaccount {
+          display: grid;
+          margin: 0;
+        }
+      }
+      &#membership-hint {
+        display: grid;
+        gap: 1rem;
+        > h3 {
+          margin: 0;
+          text-align: center;
+          white-space: nowrap;
+        }
+      }
     }
   }
 }
