--- a/metager/resources/less/metager/pages/spende/spende.less
+++ b/metager/resources/less/metager/pages/spende/spende.less
@@ -3,28 +3,59 @@
   gap: 1rem;
   padding: 1rem;
   > #breadcrumps {
-    list-style-type: disclosure-closed;
-    display: flex;
+    list-style-type: none;
     padding: 0;
-    gap: 1.5rem;
-    font-size: clamp(0.8rem, 3vw, 1.1rem);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+
+    text-align: center;
+    background-color: @highlightcolor;
+    @checked-color: #008220;
     > li {
-      &:nth-child(1) {
-        list-style-type: none;
+      padding: 1rem;
+      white-space: nowrap;
+      &:nth-child(2) {
+        border-right: 1px solid darken(@highlightcolor, 10%);
+        border-left: 1px solid darken(@highlightcolor, 10%);
+      }
+      &.done {
+        background-color: @checked-color;
+        color: white;
       }
       &.current {
-        color: #009f64;
+        color: @checked-color;
       }
       &.next {
-        color: fade(@text-color, 50%);
+        color: darken(@highlightcolor, 20%);
       }
     }
-    @media (max-width: 400px) {
-      list-style-type: none;
-      text-align: center;
+    @media (max-width: 590px) {
+      grid-template-columns: 1fr 1fr;
+      > li {
+        padding: 0.5rem;
+        &:nth-last-child(1) {
+          grid-column: span 2;
+          border-top: 1px solid darken(@highlightcolor, 10%);
+        }
+      }
+    }
+    @media (max-width: 390px) {
+      grid-template-columns: 1fr;
+      > li:nth-last-child(1) {
+        grid-column: auto;
+        border: 0;
+      }
+      > li:nth-child(2) {
+        border: 0;
+        border-top: 1px solid darken(@highlightcolor, 10%);
+        border-bottom: 1px solid darken(@highlightcolor, 10%);
+      }
     }
   }
   > #content-container {
+    display: grid;
+    gap: 1rem;
     @import "./amount.less";
+    @import "./interval.less";
   }
 }
