paypal payment working

--- a/metager/resources/less/metager/pages/spende/base-dark.less
+++ b/metager/resources/less/metager/pages/spende/base-dark.less
@@ -1,4 +1,8 @@
 @highlightcolor: #444444;
 
+.invert-dark {
+  filter: invert(1);
+}
+
 @import "../../variables-dark.less";
 @import "./spende.less";
