--- a/metager/resources/less/metager/pages/spende/spende.less
+++ b/metager/resources/less/metager/pages/spende/spende.less
@@ -57,5 +57,7 @@
     gap: 1rem;
     @import "./amount.less";
     @import "./interval.less";
+    @import "./paymentMethod.less";
+    @import "./paypal.less";
   }
 }
