--- a/metager/resources/less/metager/pages/spende/paypal.less
+++ b/metager/resources/less/metager/pages/spende/paypal.less
@@ -2,4 +2,21 @@
   max-width: 700px;
   margin: 0 auto;
   width: 100%;
+
+  > #payment-fields {
+    > form#card-form {
+      display: grid;
+      grid-template-columns: 3fr 1fr 1fr;
+      gap: 0.5rem;
+      > div.input-group {
+        > div {
+          height: 3rem;
+          border: 1px solid @color-light-grey;
+        }
+      }
+      > button {
+        grid-column: span 3;
+      }
+    }
+  }
 }
