allow changing already done steps in contribution flow

--- a/metager/resources/less/metager/pages/spende/base-dark.less
+++ b/metager/resources/less/metager/pages/spende/base-dark.less
@@ -1,5 +1,7 @@
 @highlightcolor: #444444;
-
+@highlighttextcolor: darken(white, 55%);
+@hightlighttextcolorcurrent: #7fff7f;
+@highlightbackgroundcolorcurrent: darken(@hightlighttextcolorcurrent, 60%);
 .invert-dark {
   filter: invert(1);
 }
