--- a/metager/resources/less/metager/pages/spende/base.less
+++ b/metager/resources/less/metager/pages/spende/base.less
@@ -1,4 +1,7 @@
 @highlightcolor: #efefef;
+@highlighttextcolor: darken(@highlightcolor, 10%);
+@hightlighttextcolorcurrent: #3c803c;
+@highlightbackgroundcolorcurrent: @hightlighttextcolorcurrent;
 
 @import "../../variables.less";
 @import "./spende.less";
