--- a/metager/resources/less/metager/pages/spende/base-dark.less
+++ b/metager/resources/less/metager/pages/spende/base-dark.less
@@ -6,5 +6,9 @@
   filter: invert(1);
 }
 
+.invert-light:not(.invert-dark) {
+  filter: invert(0);
+}
+
 @import "../../variables-dark.less";
 @import "./spende.less";
