--- a/metager/resources/less/metager/pages/spende/base.less
+++ b/metager/resources/less/metager/pages/spende/base.less
@@ -3,5 +3,9 @@
 @hightlighttextcolorcurrent: #3c803c;
 @highlightbackgroundcolorcurrent: @hightlighttextcolorcurrent;
 
+.invert-light {
+  filter: invert(1);
+}
+
 @import "../../variables.less";
 @import "./spende.less";
