--- a/metager/resources/less/metager/pages/spende/spende.less
+++ b/metager/resources/less/metager/pages/spende/spende.less
@@ -88,5 +88,6 @@
     @import "./interval.less";
     @import "./paymentMethod.less";
     @import "./paypal.less";
+    @import "./bankaccount.less";
   }
 }
