added banktransfer qr

--- a/metager/resources/less/metager/pages/spende/bankaccount.less
+++ b/metager/resources/less/metager/pages/spende/bankaccount.less
@@ -12,6 +12,10 @@
     }
     > #bank-qr {
       max-width: 100%;
+      display: grid;
+      > a:hover {
+        color: inherit;
+      }
     }
   }
 }
