--- a/metager/resources/less/metager/pages/spende/amount.less
+++ b/metager/resources/less/metager/pages/spende/amount.less
@@ -80,10 +80,7 @@
     display: flex;
     justify-content: space-between;
     gap: 5rem;
-    @media (max-width: 730px) {
-      flex-direction: column;
-      gap: 1rem;
-    }
+
     > div {
       background-color: @highlightcolor;
       padding: 1rem;
@@ -93,9 +90,13 @@
       }
       &#bank-transfer {
         display: grid;
+        gap: 2rem;
+        grid-template-columns: 1fr 15rem;
         grid-template-rows: auto 1fr;
         place-items: center;
+        white-space: nowrap;
         > h3 {
+          grid-column: span 2;
           white-space: nowrap;
           text-align: center;
         }
@@ -103,14 +104,50 @@
           display: grid;
           margin: 0;
         }
+        > .qr {
+          display: grid;
+          width: 10rem;
+          > a {
+            color: inherit;
+            &:hover {
+              color: inherit;
+            }
+          }
+        }
       }
       &#membership-hint {
         display: grid;
+        grid-template-rows: repeat(3, max-content);
+        place-content: center;
         gap: 1rem;
         > h3 {
           margin: 0;
           text-align: center;
           white-space: nowrap;
+        }
+        > a:hover {
+          color: inherit;
+        }
+      }
+    }
+
+    @media (max-width: 910px) {
+      flex-direction: column;
+      gap: 1rem;
+      > div#bank-transfer {
+        grid-template-columns: 1fr 1fr;
+      }
+    }
+
+    @media (max-width: 520px) {
+      > div#bank-transfer {
+        grid-template-columns: 1fr;
+        > h3 {
+          grid-column: auto;
+        }
+        > div.qr {
+          width: 100%;
+          max-width: 200px;
         }
       }
     }
