added base form for directdebit

--- a/metager/resources/less/metager/pages/spende/spende.less
+++ b/metager/resources/less/metager/pages/spende/spende.less
@@ -89,5 +89,6 @@
     @import "./paymentMethod.less";
     @import "./paypal.less";
     @import "./bankaccount.less";
+    @import "./directdebit.less";
   }
 }
