--- a/metager/resources/less/metager/pages/spende/paypal.less
+++ b/metager/resources/less/metager/pages/spende/paypal.less
@@ -27,6 +27,9 @@
         }
       }
       &.input-group {
+        > label {
+          white-space: nowrap;
+        }
         > div {
           height: 3rem;
           border: 1px solid @color-light-grey;
