created landing page

--- a/metager/resources/less/metager/pages/spende/amount.less
+++ b/metager/resources/less/metager/pages/spende/amount.less
@@ -91,7 +91,7 @@
       &#bank-transfer {
         display: grid;
         gap: 2rem;
-        grid-template-columns: 1fr 15rem;
+        grid-template-columns: 1fr 10rem;
         grid-template-rows: auto 1fr;
         place-items: center;
         white-space: nowrap;
@@ -109,6 +109,7 @@
           width: 10rem;
           > a {
             color: inherit;
+            overflow: hidden;
             &:hover {
               color: inherit;
             }
