added info box and page

--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -447,6 +447,8 @@ a {
       margin-bottom: @padding-small-default;
     }
 
+    @import "./default-changed.less";
+
     #results .alteration {
       margin: (@padding-small-default * 2) 0px;
       margin-top: 0;
