--- a/metager/resources/less/metager/pages/resultpage/result.less
+++ b/metager/resources/less/metager/pages/resultpage/result.less
@@ -214,7 +214,7 @@
       .result-image {
         grid-area: image;
         align-self: center;
-        justify-self: left;
+        justify-self: end;
         border-radius: 15px;
         overflow: hidden;
       }
@@ -244,7 +244,7 @@
         > img {
           display: block;
           max-width: 160px;
-          max-height: 120px;
+          max-height: 100px;
           width: auto;
           height: auto;
         }
