do not scroll foki-switcher

--- a/metager/resources/less/metager/startpage-only.less
+++ b/metager/resources/less/metager/startpage-only.less
@@ -39,7 +39,7 @@ html {
 }
 
 #foki-switcher {
-  position: absolute;
+  position: relative;
   list-style-type: none;
   display: flex;
   gap: 1rem;
