--- a/metager/resources/less/metager/pages/resultpage/result.less
+++ b/metager/resources/less/metager/pages/resultpage/result.less
@@ -253,7 +253,7 @@
 
     .result-description {
       color: @result-description-color;
-      font-size: 0.95em;
+      font-size: 1;
       line-height: 1.3;
       clear: both;
       overflow: hidden;
