--- a/metager/resources/less/metager/startpage-only.less
+++ b/metager/resources/less/metager/startpage-only.less
@@ -43,6 +43,12 @@ html {
   list-style-type: none;
   display: flex;
   gap: 1rem;
+  @supports not (selector(:first-child)) {
+    gap: 0;
+    > * {
+      padding: 0 1rem;
+    }
+  }
   width: 100%;
   align-items: center;
   justify-content: center;
