--- a/metager/resources/less/metager/pages/resultpage/result.less
+++ b/metager/resources/less/metager/pages/resultpage/result.less
@@ -9,6 +9,12 @@
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
+  @supports not (selector(:first-child)) {
+    gap: 0;
+    > *:not(:nth-child(1)) {
+      padding: 0.125rem 0;
+    }
+  }
   @media (max-width: @screen-mobile) {
     .card;
     margin: 0;
@@ -91,6 +97,12 @@
       align-items: center;
       line-height: 1.3;
       gap: 0 8px;
+      @supports not (selector(:first-child)) {
+        gap: 0;
+        > *:not(:nth-child(1)) {
+          padding: 0 4px;
+        }
+      }
 
       figure.content-warning {
         display: none;
@@ -177,6 +189,12 @@
       display: flex;
       overflow-x: auto;
       gap: 1.5rem;
+      @supports not (selector(:first-child)) {
+        gap: 0;
+        > *:not(:nth-child(1)) {
+          padding: 0 0.75rem;
+        }
+      }
       margin: 0;
       padding: 0;
       margin-bottom: -0.25rem;
@@ -199,6 +217,12 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    @supports not (selector(:first-child)) {
+      gap: 0;
+      > *:not(:nth-child(1)) {
+        padding: 0.25rem 0;
+      }
+    }
     &.with-image {
       display: grid;
       grid-template-columns: auto auto;
@@ -345,6 +369,12 @@
         display: flex;
         margin-bottom: 0;
         gap: 1rem;
+        @supports not (selector(:first-child)) {
+          gap: 0;
+          > *:not(:nth-child(1)) {
+            padding: 0 0.5rem 0;
+          }
+        }
 
         li {
           font-size: 0.85em;
@@ -383,6 +413,12 @@
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
+    @supports not (selector(:first-child)) {
+      gap: 0;
+      > *:not(:nth-child(1)) {
+        padding: 0 0.5rem;
+      }
+    }
     align-items: center;
     align-self: end;
 
