--- a/metager/resources/less/metager/pages/start-page.less
+++ b/metager/resources/less/metager/pages/start-page.less
@@ -27,6 +27,12 @@
       display: flex;
       align-items: center;
       gap: 0.5rem;
+      @supports not (selector(:first-child)) {
+        gap: 0;
+        > * {
+          padding: 0 0.5rem;
+        }
+      }
       > img {
         height: 1em;
         rotate: -90deg;
