--- a/metager/resources/less/metager/parts/searchbar.less
+++ b/metager/resources/less/metager/parts/searchbar.less
@@ -53,6 +53,9 @@
       justify-content: center;
       align-items: center;
       height: 1.25rem;
+      @supports not (selector(:first-child)) {
+        padding: 0 0.5rem;
+      }
       > a {
         color: #585858;
         display: block;
