fixed styling for older browsers

--- a/metager/resources/less/metager/parts/searchbar.less
+++ b/metager/resources/less/metager/parts/searchbar.less
@@ -54,7 +54,7 @@
       align-items: center;
       height: 1.25rem;
       @supports not (selector(:first-child)) {
-        padding: 0 0.5rem;
+        padding-right: 1rem;
       }
       > a {
         color: #585858;
