--- a/metager/resources/less/metager/pages/startpage/startpage.less
+++ b/metager/resources/less/metager/pages/startpage/startpage.less
@@ -14,6 +14,9 @@ div.startpage {
     max-width: 100%;
     > div#search-content {
       height: 100vh;
+      @supports (height: 100dvh) {
+        height: 100dvh;
+      }
       @media (max-height: 400px) {
         height: auto;
       }
@@ -145,6 +148,12 @@ div.startpage {
           color: inherit;
           padding: 8px;
           gap: 8px;
+          @supports not (selector(:first-child)) {
+            gap: 0;
+            > * {
+              padding: 0 4px;
+            }
+          }
           width: 25%;
           @media (max-width: 420px) {
             flex-direction: column;
@@ -352,6 +361,12 @@ div.startpage {
           padding: 0px;
           list-style: none;
           gap: 2em;
+          @supports not (selector(:first-child)) {
+            gap: 0;
+            > * {
+              padding: 1em;
+            }
+          }
           max-width: 700px;
           width: 100%;
           @media (max-width: 500px) {
