--- a/metager/resources/less/metager/pages/count/style.less
+++ b/metager/resources/less/metager/pages/count/style.less
@@ -7,6 +7,10 @@ td.date {
   text-align: left;
 }
 
+table {
+  width: 100%;
+}
+
 table.table-striped > tbody > tr:nth-child(odd) {
   background-color: lightgrey;
 }
