--- a/metager/resources/less/metager/general/forms.less
+++ b/metager/resources/less/metager/general/forms.less
@@ -1,5 +1,5 @@
 // Newly defined MetaGer form styles
-.search-btn-mini{
+.search-btn-mini {
   border: solid 1px;
   height: 34px;
   border-top-right-radius: 3px;
@@ -8,17 +8,14 @@
   vertical-align: middle;
   border-left-style: none;
 }
-.search-input-mini{
-  border-top-right-radius: 0px!important;
-border-bottom-right-radius: 0px!important;
+.search-input-mini {
+  border-top-right-radius: 0px !important;
+  border-bottom-right-radius: 0px !important;
 }
-
-
 
 //
 // Forms
 // --------------------------------------------------
-
 
 // Normalize non-controls
 //
@@ -53,7 +50,6 @@ label {
   font-weight: bold;
 }
 
-
 // Normalize form controls
 //
 // While most of our form styles require extra classes, some basic normalization
@@ -61,7 +57,9 @@ label {
 // address browser inconsistencies.
 
 // Override content-box in Normalize (* isn't specific enough)
-input[type="text"] {
+input[type="text"],
+input[type="email"],
+input[type="number"] {
   background-color: @input-background;
   color: @input-text;
   padding: 4px 8px;
@@ -111,11 +109,10 @@ output {
   color: @input-color;
 }
 
-textarea{
+textarea {
   background-color: @input-bg;
   color: @input-text;
 }
-
 
 // Common form controls
 //
@@ -151,7 +148,7 @@ textarea{
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border: 1px solid @input-border;
   border-radius: @input-border-radius; // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
-  .box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
+  .box-shadow(inset 0 1px 1px rgba(0,0,0,0.075));
   .transition(~"border-color ease-in-out .15s, box-shadow ease-in-out .15s");
 
   // Customize the `:focus` state to imitate native WebKit styles.
@@ -189,7 +186,6 @@ textarea{
   }
 }
 
-
 // Search inputs in iOS
 //
 // This overrides the extra rounded corners on search inputs in iOS so that our
@@ -200,7 +196,6 @@ textarea{
 input[type="search"] {
   -webkit-appearance: none;
 }
-
 
 // Special styles for iOS temporal inputs
 //
@@ -232,7 +227,6 @@ input[type="search"] {
   }
 }
 
-
 // Form groups
 //
 // Designed to help with the organization and spacing of vertical forms. For
@@ -241,7 +235,6 @@ input[type="search"] {
 .form-group {
   margin-bottom: @form-group-margin-bottom;
 }
-
 
 // Checkboxes and radios
 //
@@ -324,7 +317,6 @@ input[type="checkbox"] {
   }
 }
 
-
 // Static form control text
 //
 // Apply class to a `p` element to make any string of text align with labels in
@@ -344,7 +336,6 @@ input[type="checkbox"] {
     padding-right: 0;
   }
 }
-
 
 // Form control sizing
 //
@@ -410,7 +401,6 @@ input[type="checkbox"] {
   }
 }
 
-
 // Form control feedback states
 //
 // Apply contextual and semantic states to individual form controls.
@@ -465,7 +455,6 @@ input[type="checkbox"] {
 
 // Reposition feedback icon if input has visible label above
 .has-feedback label {
-
   & ~ .form-control-feedback {
     top: (@line-height-computed + 5); // Height of the `label` and its margin
   }
@@ -473,7 +462,6 @@ input[type="checkbox"] {
     top: 0;
   }
 }
-
 
 // Help text
 //
@@ -487,7 +475,6 @@ input[type="checkbox"] {
   color: lighten(@text-color, 25%); // lighten the text some for contrast
 }
 
-
 // Inline forms
 //
 // Make forms appear inline(-block) by adding the `.form-inline` class. Inline
@@ -500,7 +487,6 @@ input[type="checkbox"] {
 // Heads up! This is mixin-ed into `.navbar-form` in navbars.less.
 
 .form-inline {
-
   // Kick in the inline
   @media (min-width: @screen-sm-min) {
     // Inline-block all the things for "inline"
@@ -569,14 +555,12 @@ input[type="checkbox"] {
   }
 }
 
-
 // Horizontal forms
 //
 // Horizontal forms are built on grid classes and allow you to create forms with
 // labels on the left and inputs on the right.
 
 .form-horizontal {
-
   // Consistent vertical alignment of radios and checkboxes
   //
   // Labels also get some reset styles, but that is scoped to a media query below.
@@ -606,7 +590,9 @@ input[type="checkbox"] {
     .control-label {
       text-align: right;
       margin-bottom: 0;
-      padding-top: (@padding-base-vertical + 1); // Default padding plus a border
+      padding-top: (
+        @padding-base-vertical + 1
+      ); // Default padding plus a border
     }
   }
 
