--- a/metager/resources/less/metager/pages/resultpage/result.less
+++ b/metager/resources/less/metager/pages/resultpage/result.less
@@ -158,17 +158,8 @@
           color: #8091a2;
         }
 
-        span.mark {
-          border-color: #0d9c0d;
-          color: #0d9c0d;
-          padding: 1px;
-          border-radius: 4px;
-          font-weight: bold;
-          font-size: 0.6em;
-          margin-right: 4px;
-          border: 1px solid;
-          position: relative;
-          top: -2px;
+        img {
+          height: 1rem;
         }
       }
 
